# packages/server/src/cms/dto/media.dto.ts
@@ -1,44 +1,52 @@
+
 export class CreateMediaDto {
-    name: string;
-    caption: string;
-    description: string;
-    ext: any;
-    url: string;
-    uri: string;
+  name: string;
+  caption: string;
+  description: string;
+  ext: any;
+  url: string;
+  uri: string;
 }
 
 export class EditMediaDto {
-    id: string;
-    name: string;
-    caption: string;
-    description: string;
-    ext: any;
-    url: string;
-    uri: string;
+  id: string;
+  name: string;
+  caption: string;
+  description: string;
+  ext: any;
+  url: string;
+  uri: string;
 }
 
 export class MediaRes {
-    id: string;
-    name: string;
-    caption: string;
-    description: string;
-    ext: any;
-    url: string;
-    uri: string;
+  id: string;
+  name: string;
+  caption: string;
+  description: string;
+  ext: any;
+  url: string;
+  uri: string;
 }
 
-export declare interface PaginateMedia {
-    error?: Error;
-    list: MediaRes[];
-    total: number;
+export class UploadRes {
+  ok: boolean;
+  error?: string;
+  file?: string;
 }
 
-export const MediaResponseFields = [
-    'id',
-    'name',
-    'caption',
-    'description',
-    'ext',
-    'url',
-    'uri'
-];
+export class UploadMultipleRes {
+  ok: boolean;
+  error?: string;
+  files?: string[];
+}
+
+export class MediaFile {
+  fieldname: string;
+  originalname: string;
+  encoding: string;
+  mimetype: string;
+  destination: string;
+  filename: string;
+  path: string;
+  size: number;
+}
