# packages/testing/generated/swagger.json
@@ -1488,8 +1488,17 @@
 		},
 		"SettingsGroup": {
 			"description": "",
-			"properties": {},
-			"type": "object"
+			"properties": {
+				"options": {
+					"type": "object",
+					"properties": {},
+					"description": ""
+				}
+			},
+			"type": "object",
+			"required": [
+				"options"
+			]
 		},
 		"ResultList$Setting": {
 			"description": "",
@@ -2720,6 +2729,100 @@
 				"parent",
 				"paths",
 				"description"
+			]
+		},
+		"UploadRes": {
+			"description": "",
+			"properties": {
+				"ok": {
+					"type": "boolean",
+					"description": ""
+				},
+				"error": {
+					"type": "string",
+					"description": ""
+				},
+				"file": {
+					"type": "string",
+					"description": ""
+				}
+			},
+			"type": "object",
+			"required": [
+				"ok"
+			]
+		},
+		"MediaFile": {
+			"description": "",
+			"properties": {
+				"fieldname": {
+					"type": "string",
+					"description": ""
+				},
+				"originalname": {
+					"type": "string",
+					"description": ""
+				},
+				"encoding": {
+					"type": "string",
+					"description": ""
+				},
+				"mimetype": {
+					"type": "string",
+					"description": ""
+				},
+				"destination": {
+					"type": "string",
+					"description": ""
+				},
+				"filename": {
+					"type": "string",
+					"description": ""
+				},
+				"path": {
+					"type": "string",
+					"description": ""
+				},
+				"size": {
+					"type": "number",
+					"format": "double",
+					"description": ""
+				}
+			},
+			"type": "object",
+			"required": [
+				"fieldname",
+				"originalname",
+				"encoding",
+				"mimetype",
+				"destination",
+				"filename",
+				"path",
+				"size"
+			]
+		},
+		"UploadMultipleRes": {
+			"description": "",
+			"properties": {
+				"ok": {
+					"type": "boolean",
+					"description": ""
+				},
+				"error": {
+					"type": "string",
+					"description": ""
+				},
+				"files": {
+					"type": "array",
+					"items": {
+						"type": "string"
+					},
+					"description": ""
+				}
+			},
+			"type": "object",
+			"required": [
+				"ok"
 			]
 		},
 		"MediaRes": {
@@ -6257,11 +6360,14 @@
 			"post": {
 				"operationId": "MediaUploadFile",
 				"produces": [
-					"text/html"
+					"application/json"
 				],
 				"responses": {
-					"204": {
-						"description": "No content"
+					"200": {
+						"description": "Ok",
+						"schema": {
+							"$ref": "#/definitions/UploadRes"
+						}
 					}
 				},
 				"description": "",
@@ -6275,10 +6381,10 @@
 					{
 						"description": "",
 						"in": "body",
-						"name": "files",
+						"name": "file",
 						"required": true,
 						"schema": {
-							"type": "object"
+							"$ref": "#/definitions/MediaFile"
 						}
 					}
 				]
@@ -6288,11 +6394,14 @@
 			"post": {
 				"operationId": "MediaUploadFiles",
 				"produces": [
-					"text/html"
+					"application/json"
 				],
 				"responses": {
-					"204": {
-						"description": "No content"
+					"200": {
+						"description": "Ok",
+						"schema": {
+							"$ref": "#/definitions/UploadMultipleRes"
+						}
 					}
 				},
 				"description": "",
@@ -6307,9 +6416,12 @@
 						"description": "",
 						"in": "body",
 						"name": "files",
-						"required": true,
+						"required": false,
 						"schema": {
-							"type": "object"
+							"type": "array"
+						},
+						"items": {
+							"$ref": "#/definitions/MediaFile"
 						}
 					}
 				]
